Improve media fetching robustness in BedrockProxyChatModel
Refactor URL handling and media content retrieval with additional
validation and resource management improvements.

Signed-off-by: Christian Tzolov <christian.tzolov@broadcom.com>